--- a/jsvpaid-1.html
+++ b/jsvpaid-1.html
@@ -47,8 +47,8 @@
         var environmentVars = {
             maxWrapperLevels : 5,
             videoSlot        : document.getElementById('content'), // Required
-            slot             : document.getElementById('adslot'), // Required
-            clickSlot        : document.getElementById('clicktracker') // optional
+            slot             : document.getElementById('adslot') // Required
+          //  clickSlot        : document.getElementById('clicktracker') // optional
             // companionSlots   : []
         };
 
