--- a/jsvpaid-1.html
+++ b/jsvpaid-1.html
@@ -240,12 +240,12 @@
 <body onload="onBodyLoad()">
 <div id="wrapper">
     <div id="container">
-        <video id="content">
+        <video id="content" controls="true">
             <!-- source src="http://dev.adap.tv/Jason/DosEquisItalianCountryside.mp4"></source -->
             <source src="http://sjc-uhls-vip03.ustream.tv/watch/playlist.m3u8?cid=8853261&appType=11&appVersion=2&locks=97d170e1550eee4afc0af065b78cda302a97674c&geo=HU&geocity=Budapest&userId=1119369597&connectionId=sjc-ums05_1119369597&ts=1396278745&ip=195.56.66.6&cdn=uhs_level3&sgn=9a2787ee0e67332af530133598b21c96086bb9d6"></source>
         </video>
         <div id="adslot">
-            </slot>
+
         </div>
     </div>
     <div id="control">Play/Pause</div>
