--- a/jsvpaid-1.html
+++ b/jsvpaid-1.html
@@ -46,9 +46,9 @@
          */
         var environmentVars = {
             maxWrapperLevels : 5,
+            clickSlot        : document.getElementById('clicktracker'), // optional
             videoSlot        : document.getElementById('content'), // Required
             slot             : document.getElementById('adslot') // Required
-          //  clickSlot        : document.getElementById('clicktracker') // optional
             // companionSlots   : []
         };
 
