--- a/jsvpaid-1.html
+++ b/jsvpaid-1.html
@@ -97,7 +97,7 @@
         // construct the adTag, and put in as creativeData
         creativeData = {};
         //creativeData.adTagUrl = __adaptv__.vpaid.constructAdTag(url, params, customParams);
-        creativeData.adTagUrl = "http://ads.adap.tv/a/t/ustreamtv?pageUrl=http%3A%2F%2Fwww.ustream.tv%2Fchannel%2Fwww-maximilianschnauzers-com&id=8853261&title=Puppy%20Kindergarten%20%20www.livepuppycam.com&description=SCHNAUZERS%20AVAILABLE%20at%20%20www.MaximilianSchnauzers.comOUR%20LIVE%20CHAT%20HAS%20MOVED%20TO%20www.LivePuppyCam.comSome%20viewers%20have%20expressed%20a%20desire%20to%20donate%20toward%20the%20high%20costs%20of%20keeping%20this%20live%20cam%2Fwebsite%20running.%20If%20you%20wish%20to%20make%20a%20donation%2C%20to%20offset%20the%20monthly%20costs%20of%20upgraded%20internet%20service%20required%20for%20this%20site%2C%20high%20electric%20bill%20for%205%20computers%20running%2024%2F7%20none%20stop%2C%20ongoing%20equipment%20and%20website%20maintenance%20costs%2C%20and%20other%20monthly%20expenses%20to%20keep%20this%20site%20going%2C%20thank%20you%20so%20much...%20it's%20truly%20appreciated.%20Please%20know%2C%20donations%20or%20not%2C%20my%20Schnauzers%20and%20I%20love%20having%20you%20be%20part%20of%20our%20life.%20We%20are%20blessed%20to%20have%20you%20as%20our%20friends!%20Click%20on%20the%20Paypal%20Donate%20button%20below%20or%20go%20to%20www.Maximilianschnauzers.com%20and%20click%20on%20the%20PAYPAL%20Logo%20to%20send%20your%20Donation.%20THANK%20YOU!%20There%20are%205%20cameras%20to%20view.%20Cam%201%26nbsp%3BWhere%20schnauzer%20babies%20are%20bornCam%202%20Kindergarten%20front%20room%20where%20older%20puppies%20playCam%203%20Outdoor%20Camera%20includes%20a%20view%20to%202%20bird%20feedersCam%204%20Big%20Boy's%20Room&duration=555000&categories=95-97&keywords=Kuty%C3%A1k&url=http%3A%2F%2Fwww.ustream.tv%2Fembed%2Ftest&zid=live5pre&ctx.prg=f&ctx.language=en-US&ctx.locale=hu_HU&pet=preroll&creativeType=vast_video&cb=70&a.sdk=adaptv&a.sdkType=js&a.vpaid=0";
+        creativeData.adTagUrl = "http://ads.adap.tv/a/t/ustreamtv?pageUrl=http%3A%2F%2Fwww.ustream.tv%2Frecorded%2F45590221&id=4328435&title=WORLD%20OF%20HUMMINGBIRDS!%20(Emma's%20Nest)&description=WORLD%20OF%20HUMMINGBIRDS!%20(Emma's%20Nest)&duration=886.554&categories=95-101&keywords=WORLD%20OF%20HUMMINGBIRDS!%20(Emma's%20Nest)&url=http%3A%2F%2Fwww.ustream.tv%2Fembed%2Ftest&zid=rec5pre&ctx.language=en-US&ctx.locale=hu_HU&ctx.vid=45590221&pet=preroll&creativeType=vast_video&cb=50&a.sdk=adaptv&a.sdkType=js&a.vpaid=0";
 
         /**
          * adTagUrl is used in cases where you have a specific ad tag you want to call.
@@ -242,7 +242,7 @@
     <div id="container">
         <video id="content" controls="true">
             <!-- source src="http://dev.adap.tv/Jason/DosEquisItalianCountryside.mp4"></source -->
-            <source src="http://sjc-uhls-vip03.ustream.tv/watch/playlist.m3u8?cid=8853261&appType=11&appVersion=2&locks=97d170e1550eee4afc0af065b78cda302a97674c&geo=HU&geocity=Budapest&userId=1119369597&connectionId=sjc-ums05_1119369597&ts=1396278745&ip=195.56.66.6&cdn=uhs_level3&sgn=9a2787ee0e67332af530133598b21c96086bb9d6"></source>
+            <source src="http://tcdn.ustream.tv/video/45590221?preset_id=2&hash=9954"></source>
         </video>
         <div id="adslot">
 
