--- a/ios8.html
+++ b/ios8.html
@@ -7,12 +7,13 @@
 
 <body>
 
-<h1> 2 </h1>
+<h1> 3 </h1>
 
     <video
             poster="http://static-cdn1.ustream.tv/i/channel/live/1_1524,640x360,b:2015032910.jpg"
             width="640"
             height="320"
+            controls
     >
         <source src="http://sjc-uhls-proxy04.ustream.tv/watch/playlist.m3u8?cid=1524&appType=11&appVersion=2&locks=97d170e1550eee4afc0af065b78cda302a97674c&geo=HU&geocity=Budapest&userId=1536917622&connectionId=sjc-flot-live01_1536917622&ts=1427785573&ip=195.56.66.6&cdn=uhs_akamai&sgn=793de0e2c3a45e6123350500e0c2d340b79463b6"></source>
     </video>
