--- a/frametest.html
+++ b/frametest.html
@@ -12,7 +12,7 @@
 
     if (location.ancestorOrigins) {
 
-        console.log(location.ancestorOrigins);
+        console.log(location.ancestorOrigins[0]);
 
     }
 
