--- a/frametest.html
+++ b/frametest.html
@@ -5,19 +5,12 @@
 
 </head>
 <body>
+
+<iframe src="http://testenvironment.blog.hu/2015/05/08/cim-nelkul_97257" width="500" height="400"></iframe>
+
 <script type="application/javascript">
 
 
-
-
-    if (location.ancestorOrigins) {
-
-        console.group('ancestorOrigins')
-        console.log(location.ancestorOrigins);
-        console.log(location.ancestorOrigins[0]);
-        console.log(location.ancestorOrigins[location.ancestorOrigins.length - 1]);
-        console.groupEnd();
-    }
 
 
 
