--- a/frametest.html
+++ b/frametest.html
@@ -6,7 +6,13 @@
 </head>
 <body>
 
-<iframe src="http://testenvironment.blog.hu/2015/05/08/cim-nelkul_97257" width="500" height="400"></iframe>
+<h3>Teszt</h3>
+
+<iframe src="http://testenvironment.blog.hu/2015/05/08/teszt_268" width="500" height="400"></iframe>
+
+<h3>Eles</h3>
+
+<iframe src="http://testenvironment.blog.hu/2015/05/08/eles_621" width="500" height="400"></iframe>
 
 <script type="application/javascript">
 
