--- a/frametest.html
+++ b/frametest.html
@@ -8,7 +8,7 @@
 
 <h3>Teszt</h3>
 
-<iframe src="http://testenvironment.blog.hu/2015/05/08/teszt_268" width="500" height="400"></iframe>
+<iframe src="http://viragteszt.blogspot.hu/2015/05/ez-am-multilevel-mulatsag.html" width="500" height="400"></iframe>
 
 <h3>Eles</h3>
 
